# -lawyer

./: .dockerignore  .gitignore  README.md
.github/workflows/: build-android-white-label.yml  deploy.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/lib/: main.dart
app/lib/core/config/: api_config.dart  tenant_build_config.dart
app/lib/core/constants/: plan_perm_labels.dart  plan_sidebar_perm_keys.dart
app/lib/core/responsive/: layout_mode.dart
app/lib/core/theme/: app_spacing.dart  app_theme.dart  theme_mode_scope.dart
app/lib/core/util/: csv_download.dart  csv_download_stub.dart  csv_download_web.dart  csv_download_web_impl.dart  office_data_export.dart  plan_display.dart  role_labels.dart  web_file_download.dart  web_file_download_stub.dart  web_file_download_web.dart
app/lib/core/widgets/: adaptive_data_table.dart  app_states.dart  content_canvas.dart  plan_offer_card.dart  promo_image_memory.dart  (+2 more)
app/lib/data/: auth_token_storage.dart
app/lib/router/: app_router.dart
app/test/: widget_test.dart
app/web/: index.html
backend/: Dockerfile  pyproject.toml
backend/app/: finance_ledger.py  finance_reports.py  main.py  models.py  schemas.py  security.py  settings.py
infra/: docker-compose.yml
infra/github-runner/: allow-sudo-deploy.sh  ensure-runner-on-boot.sh  grant-runner-repo-access.sh  lawyer-gh-deploy.sh  setup-durable-service.sh
infra/mobile-build/: README.md  build_white_label_apk.sh  register_github_release_build.sh
infra/web/: Dockerfile  nginx.conf
scripts/: deploy-remote.sh
(+45 files in other folders)
